--- a/需求.md
+++ b/需求.md
@@ -43,8 +43,6 @@
 
 
 
-
-
 去掉播放模式的选择。播放模式改为这样软件启动的时候，就是随机播放模式。上面的功能还会形成几个列表。最近列表，标签搜索出来的列表，最新视频的列表100个。收藏列表和点赞列表。从这几个列表中点击任何视频。都会将播放器置于该列表。播放器后面的。播放列表的状态按钮显示成对应的列表。单击这个按钮。就是从任意列表状态切换成随机列表状态。当用户从以上的几个列表中点击一个视频进入的时候，该视频播放完之后就会自动播放下一个视频。播放到列表里的时候，会从开头继续播放。Setting文件中不再记录。播放列表的模式。之前说的播放模式。现在改成播放列表的说法。
 
 
@@ -56,3 +54,15 @@
 Setting中的初始的几个路径都是空的。当软件启动的时候，检查到任意路径为空。会先进入一个路径设置页面。配置这四个路径。
 
 再增加一个设置界面
+
+
+
+再加入一个录制功能。就是从当前帧开始录制。然后点击停止按钮的时候停止。录制和停止是一个按钮。截图的文件名之前是i加下划线。视频是v加下划线加时间戳。
+
+再加入一个文件。总大小的统计。
+
+
+
+
+
+在代码实现上，files和tags这两个文件读取和写入，应该有一层抽象，这两个文件也有可能之后会迁移到数据库吧。
