--- a/提示词.md
+++ b/提示词.md
@@ -1,9 +1,12 @@
-1. 痛点
-2. 功能
-3. 相关的setting配置
-4. 相关快捷键和UI按钮
-5. 用户操作，内部逻辑，UI变化，数据变化
-6. 默认状态下UI文字描述：在整体的位置，和本功能相关的部分的布局和描述
+从以下 几点 总结一个份文档，说明   功能:
+
+1. 痛点 和 动机
+2. 用户可用功能
+3. 相关的setting配置，没有直接说明为无
+4. 相关快捷键，没有直接说明为无
+5. UI按钮，没有直接说明为无
+6. 用户操作，内部逻辑，UI变化，数据变化
+7. 默认状态下UI文字描述：在整体的位置，和本功能相关的部分的布局和描述
 
 
 
