--- a/功能/列表-随机.md
+++ b/功能/列表-随机.md
@@ -1,54 +1,43 @@
 ### 1. 痛点与动机
 
 - **痛点**：用户面对海量视频文件时产生决策瘫痪；每个视频都想看但不知从何开始；反复浏览文件夹却无法做出选择。
-- **动机**：消除选择成本，软件启动即播，直接向用户推送内容，解决"不知道看什么"的问题。
+- **动机**：消除选择成本，软件启动即播，直接向用户推送内容，解决"不知道看什么"的问题，提供一种被动式、探索式的观看体验。
 
-### 2. 用户可用功能
+### 2. 用户功能
 
-- **默认启动播放**：软件启动后，默认进入随机播放列表模式，自动开始播放一个随机视频。
-- **切换回随机模式**：当用户处于其他特定播放列表（如收藏、点赞、最近播放等）时，可一键切回随机播放列表。
-- **播放下一个（随机）**：在当前模式下，手动切换到下一个视频或当前视频播放完后时，系统会随机选择下一个视频进行播放。
+- **默认启动播放**：软件启动后，无须选择，默认进入随机播放模式，自动开始播放一个随机视频。
+- **一键切回随机模式**：当用户处于其他播放列表（如“精品”、“点赞”、“最近播放”、“标签搜索”、“最新视频”）时，可以通过点击状态按钮，将播放列表重置回全库随机模式。
+- **播放下一个**：在随机模式下，手动点击“下一个”或当前视频播完，系统自动随机选取下一个视频。
 
-### 3. 相关的 setting 配置
+### 3. 配置 (Setting)
 
-- **无**
+- **无直接配置**：每次启动重置为随机
 
 ### 4. 相关快捷键
 
 - **无**
 
-### 5. UI 按钮
+### 5. 交互逻辑
 
-- **播放列表状态按钮**：
-  - **位置**：位于播放器后面（具体语境推测为播放控制区或标题栏右侧的功能区，文档原文为“播放器后面的”）。
-  - **样式**：在随机模式下，显示为随机播放的 Icon。
-- **播放下一个视频按钮**：
-  - **位置**：位于视频进度条之后。
-  - **功能**：点击后随机播放下一个文件。
+| 场景           | 用户操作         | 内部逻辑                                                     | UI 变化                                              | 数据变化                     |
+| -------------- | ---------------- | ------------------------------------------------------------ | ---------------------------------------------------- | ---------------------------- |
+| **软件启动**   | 打开软件         | 1. 扫描配置路径。<br>2. 获取路径和创建时间。<br>3. 构建全库随机池。<br>4. 随机加载一视频。 | 1. 播放器加载画面。<br>2. 列表状态显示“随机”图标。   | 内存建立基础文件索引。       |
+| **切回随机**   | 单击“状态按钮”   | 1. 忽略当前列表（如点赞/收藏）。<br>2. 播放队列重置为全局随机池。<br>3. 恢复随机选取策略。 | 1. 按钮图标变为“随机”图标。<br>2. 退出特殊列表状态。 | 播放列表指针指向全局随机池。 |
+| **播放下一个** | 单击“下一个按钮” | 1. 确认当前为随机模式。<br>2. 随机选取非当前视频。<br>3. 执行播放。 | 1. 视频切换。<br>2. 进度条重置。<br>3. 轨道更新。    | 无持久化变更。               |
 
-### 6. 用户操作、内部逻辑、UI 变化、数据变化
+### 6. UI 说明
 
+#### 6.1 整体布局
 
+- 该功能主要体现在播放控制区域及标题栏功能区。
+- **默认状态**：软件刚启动时，播放器处于全库随机播放模式。
 
+#### 6.2 关键控件
 
-
-
-
-
-
-
-
-| 场景           | 用户操作                 | 内部逻辑                                                     | UI 变化                                                      | 数据变化                                   |
-| -------------- | ------------------------ | ------------------------------------------------------------ | ------------------------------------------------------------ | ------------------------------------------ |
-| **软件启动**   | 打开软件                 | 1. 扫描配置路径下的文件。<br>2. 仅获取文件路径和创建时间。<br>3. 构建随机播放池。<br>4. 随机选取一个视频加载。 | 1. 播放器加载视频画面。<br>2. 列表状态按钮显示为“随机”图标。 | 内存中建立包含所有扫描到的视频的随机列表。 |
-| **切换模式**   | 单击“播放列表状态按钮”   | 1. 检查当前列表状态。<br>2. 无论当前是何种列表（点赞/收藏/最新等），强制将播放队列重置为全局随机池。 | 1. 按钮图标更新为“随机播放”图标（如果之前不是）。<br>2. 列表状态指示更新。 | 当前活跃的播放列表指针指向全局随机列表。   |
-| **播放下一个** | 单击“播放下一个视频按钮” | 1. 在全局文件池中随机选取一个非当前视频的文件。<br>2. 执行播放。 | 1. 视频内容切换。<br>2. 进度条重置。                         | 无持久化数据变更（仅内存播放状态更新）。   |
-
-### 7. 默认状态下 UI 文字描述
-
-- 
-- **整体位置**：该功能主要体现在播放控制区域。
-- **布局与描述**：
-  - 
-  - 在视频进度条的右侧，紧邻着有一个**播放下一个视频**的按钮。
-  - 在播放器区域的后方（或功能栏区域），有一个**播放列表状态按钮**。在软件刚启动的默认状态下，该按钮显示为**随机播放图标**，表示当前正处于全库随机播放模式。
+- **播放列表状态按钮**
+  - **位置**：位于播放控制按钮组的后方（或右侧功能区）。
+  - **样式**：在随机模式下（默认），显示为 **随机播放 Icon**。若处于其他列表，显示对应列表 Icon。
+  - **功能**：点击该按钮，无论当前为何种状态，强制重置为全局随机播放，图标恢复为随机 Icon。
+- **播放下一个按钮**
+  - **位置**：紧邻视频进度条的右侧。
+  - **功能**：点击后根据当前模式播放下一个文件（随机模式下即随机选取）。
