--- a/提示词.md
+++ b/提示词.md
@@ -1,12 +1,11 @@
-从以下 几点 总结一个份文档，说明   功能:
+从以下 几点 总结一个份文档，说明 随机播放列表  功能:
 
 1. 痛点 和 动机
-2. 用户可用功能
-3. 相关的setting配置，没有直接说明为无
-4. 相关快捷键，没有直接说明为无
-5. UI按钮，没有直接说明为无
+2. 用户功能（用户直观能使用到功能）
+3. 配置，没有直接说明为无 （配置文件 如 settting）
+4. 快捷键，没有直接说明为无
 6. 用户操作，内部逻辑，UI变化，数据变化
-7. 默认状态下UI文字描述：在整体的位置，和本功能相关的部分的布局和描述
+7. UI（默认状态下）（文字描述）（布局，在整体的位置， 样式）
 
 
 
