--- a/功能/列表 - 点赞.md
+++ b/功能/列表 - 点赞.md
@@ -1,75 +1,125 @@
-### 1. 痛点与动机
-
-- 
-- **痛点**：传统的“点赞/不点赞”二元状态无法区分视频的相对价值。有些视频经得起反复观看，而有些视频看几次就腻了。
-- **动机**：通过**累积点赞**机制筛选出真正高价值、耐看的视频。引入“遗忘曲线/厌倦机制”（不点赞即扣分），动态反映用户对视频当前的喜爱程度，自动沉淀精品，淘汰“看腻了”的内容。
-
-### 2. 用户可用功能
-
-- 
-- **累积点赞**：用户可多次点赞同一个视频，分值无限累加。
-- **自动衰减（厌倦机制）**：如果一个曾被点赞的视频在本次播放中未被再次点赞（播放完或切换下一个），其点赞数自动减少 **0.2**（最低减至 0）。
-- **分段统计列表**：点赞页面将所有点赞视频按分数从高到低排序，并自动将最高分到 0 分之间平均分为 10 个区间进行归类展示。
-- **列表导航**：左侧提供分段导航条，点击可快速定位到特定分数段的视频区域。
-- **列表播放**：从点赞列表点击视频，进入“点赞列表播放模式”，自动续播列表中的下一个视频，循环播放。
-
-### 3. 相关的 setting 配置
-
-- 
-- **无直接配置**：
-  - 
-  - 点赞数据的读写属于内部逻辑。
-  - 数据需持久化保存（隐含在 files.json 或元数据管理中），但没有用户层面的 setting.json 配置项来调整衰减速率或分段数量。
-
-### 4. 相关快捷键
-
-- 
-- **无**
-
-### 5. UI 按钮
-
-- 
-- **点赞按钮**：
-  - 
-  - *位置*：位于收藏（精品）按钮的后面。
-  - *样式*：点赞图标。
-  - *角标*：图标右上角显示当前点赞次数（仅显示整数部分）。
-- **点赞页面标签按钮**：
-  - 
-  - *位置*：位于收藏（精品）页面标签按钮的后面。
-- **播放列表状态按钮**（通用）：
-  - 
-  - *功能*：在点赞列表播放模式下，点击该按钮可切换回随机播放模式。
-
-### 6. 用户操作、内部逻辑、UI 变化、数据变化
-
-
-
-
-
-
-
-
-
-
-
-
-
-| 场景           | 用户操作               | 内部逻辑                                                     | UI 变化                                          | 数据变化                         |
-| -------------- | ---------------------- | ------------------------------------------------------------ | ------------------------------------------------ | -------------------------------- |
-| **点赞**       | 点击“点赞按钮”         | 1. 当前视频点赞数 +1。<br>2. 标记本次播放“已点赞”。          | 按钮右上角数字立即 +1。                          | 持久化数据中该视频的点赞数增加。 |
-| **衰减**       | 视频结束或切走(未点赞) | 1. 检查本次播放是否有点赞操作。<br>2. 若无，点赞数 -0.2。<br>3. 若结果 <0，置为 0。 | 界面显示的整数部分可能不变或 -1。                | 持久化数据中该视频的点赞数减少。 |
-| **进入列表页** | 点击“点赞页面标签”     | 1. 暂停当前播放器。<br>2. 读取所有点赞 >0 的视频。<br>3. 计算最高分，划分10个区间。<br>4. 剔除无视频的区间。 | 覆盖视窗显示点赞列表页面。                       | 无。                             |
-| **列表播放**   | 双击列表中的缩略图     | 1. 切换播放上下文为“点赞列表”。<br>2. 跳转回播放器页面。     | 1. 播放器开始播放。<br>2. 列表状态按钮更新图标。 | 活跃列表指针指向点赞列表。       |
-
-### 7. 默认状态下 UI 文字描述
-
-- 
-- **播放器界面**：
-  - 
-  - 在收藏按钮之后，有一个**点赞按钮**。如果该视频之前被点赞过，按钮右上角会有一个小的数字角标，显示当前的累计点赞数（整数）。
-- **点赞列表页面**：
-  - 
-  - **左侧区域**：一个竖向的导航条（滚动条），显示存在的点赞分数段（例如 "100-90", "50-40" 等）。
-  - **右侧区域**：主要的视频展示区。内容是连续的，由多个区块组成。每个区块顶部是**标题**（显示该分数段的最高分和最低分），标题下方是该分数段内的视频**缩略图网格**（Grid）。
-  - 如果不含视频的分数段，在左侧导航和右侧内容区均会被自动隐藏。
+- - ### 1. 痛点与动机
+  
+    - 
+    - **痛点**：
+      - 
+      - 传统的“收藏”功能是二元的（要么收藏要么不收藏），无法区分“非常喜欢”和“一般喜欢”。
+      - 随着时间推移，用户的口味会发生变化，某些曾经喜欢的视频可能已经看腻了，但手动取消收藏的操作成本较高。
+      - 缺乏一种机制来动态筛选出用户当前真正感兴趣的高价值内容。
+    - **动机**：
+      - 
+      - 引入**累积计分制**（点赞数），通过高频互动筛选出核心高价值视频。
+      - 引入**自动热度衰减**机制，如果视频被观看但未获得互动，说明吸引力下降，自动降低权重。
+      - 提供基于分数的**分段聚合视图**，让用户能直观地浏览不同喜爱程度的视频梯队。
+  
+    ### 2. 功能概要
+  
+    - 
+    - **累积点赞**：在视频播放期间，用户可多次点击点赞，分数累加。
+    - **热度衰减**：若视频在一次完整的播放会话中未获得点赞，结束后分数自动衰减（“优胜劣汰”）。
+    - **动态分段展示**：点赞列表页面根据当前所有视频的最高分，自动划分为 10 个热度区间进行归类展示。
+    - **可视化反馈**：播放器按钮实时显示点赞数；点赞页面以热度图谱形式展示内容。
+  
+    ### 3. Setting 配置与数据存储
+  
+    - 
+    - **配置文件** (setting.json)：
+      - 
+      - like_decay_rate (float): 衰减系数，默认为 **0.2**。
+    - **元数据文件** (files.json / metadata)：
+      - 
+      - like_count (float): 记录视频的点赞分数。精确到小数点后一位，UI 显示时取整。
+    - **数据逻辑**：
+      - 
+      - **下限控制**：点赞数最低衰减至 **1**（不再像旧逻辑那样归零）。这意味着一旦点赞过，至少保留 1 分，除非用户手动重置或删除。
+  
+    ### 4. 快捷键与交互
+  
+    - 
+    - **点赞操作**：
+      - 
+      - **交互**：点击“点赞”按钮（位于收藏按钮后）。
+      - **反馈**：
+        - 
+        - 图标右上角 Badge 数字 +1。
+        - 允许连续点击，每点击一次，like_count +1。
+    - **进入点赞列表**：
+      - 
+      - **交互**：点击主界面顶部的“点赞”页签（位于最近播放页签前）。
+      - **逻辑**：若播放器正在播放，进入该页面时自动**暂停**视频。
+  
+    ### 5. 核心逻辑细节
+  
+    #### 5.1 增加机制
+  
+    - 
+    - **触发条件**：用户在播放过程中点击点赞按钮。
+    - **计算**：New Score = Current Score + 1。
+    - **状态标记**：在内存中标记当前播放会话为 is_liked_in_session = true。
+  
+    #### 5.2 衰减机制
+  
+    - 
+    - **触发条件**：
+      - 
+      - 视频播放结束（自然播完）。
+      - 用户点击“下一个”或切换到其他视频。
+    - **判断逻辑**：
+      - 
+      - 检查 is_liked_in_session。
+      - **若为 True**（本次已点赞）：不进行衰减，保留增加后的分数。
+      - **若为 False**（本次“白嫖”）：执行衰减。
+        - 
+        - New Score = Current Score - like_decay_rate。
+        - **边界检查**：若 New Score < 1，则 New Score = 1。
+  
+    #### 5.3 显示逻辑
+  
+    - 
+    - **取整**：虽然后台存储浮点数（如 10.8），但在 UI 上（按钮 Badge、列表标题）只显示**整数部分**（Floor 或 Round 均可，建议向下取整以刺激用户点击）。
+  
+    ### 6. UI 说明
+  
+    #### 6.1 播放控制区
+  
+    - 
+    - **位置**：收藏按钮之后。
+    - **样式**：点赞图标（如大拇指），图标右上角悬浮显示当前点赞数（Badge）。
+  
+    #### 6.2 点赞列表页面 (The Like Page)
+  
+    此页面采用 **左侧导航 + 右侧内容** 的布局：
+  
+    - 
+    - **左侧：热度分段导航**
+      - 
+      - **计算方式**：获取所有视频中的 Max Score。将 [1, Max Score] 区间平均分为 10 个段（Segment）。
+      - **过滤**：如果某个分数段内没有视频，则该段不显示在列表中。
+      - **排序**：从高分段到低分段垂直排列。
+      - **交互**：点击某个分段，右侧视图滚动锚点到对应的标题位置。
+    - **右侧：视频平铺区域**
+      - 
+      - **布局**：连续流式布局（Flow）。
+      - **结构**：
+        - 
+        - **标题行**：显示当前分段范围（例如 "Score: 90 - 100"）。
+        - **Grid 网格**：该分段下的视频缩略图。
+        - （紧接着）下一个分段的标题及网格...
+      - **视频单元**：显示缩略图、文件名、当前分数。
+      - **交互**：双击缩略图 -> 跳转回播放器页面 -> 立即开始播放该视频。
+  
+    ### 7. 数据处理细节
+  
+    - 
+    - **列表刷新**：
+      - 
+      - 每次进入点赞页面时，需重新读取内存中的视频数据，重新计算最高分，重新划分 10 个区间，并渲染列表。
+    - **排序规则**：
+      - 
+      - 左侧分段：按分数区间降序。
+      - 右侧网格内：同一分数段内的视频，按具体分数降序排列；分数相同时按文件名或创建时间排序。
+    - **列表联动**：
+      - 
+      - 此页面属于“播放列表”的一种。
+      - 当用户在点赞列表中双击视频播放时，播放器的“播放列表状态”切换为“点赞列表”。
+      - 播放结束后，自动播放该列表排序中的下一个视频。
