--- a/功能/截图 - 轨道.md
+++ b/功能/截图 - 轨道.md
@@ -46,26 +46,36 @@
 
 | 场景          | 用户/系统操作      | 内部逻辑                                                     | UI 变化                                                      |
 | ------------- | ------------------ | ------------------------------------------------------------ | ------------------------------------------------------------ |
-| **初始化**    | 打开视频           | 1. 检索 Data/screenshot/[Hash]。<br>2. **若为空**：计算时长，生成 9 张等间隔截图。<br>3. **若非空**：加载现有截图。 | 将截图按 5px 间隔排列，下方绘制进度条                        |
+| **初始化**    | 打开视频           | 1. 检索 data/screenshots/[Hash前两位]/[完整Hash]/。<br>2. **若为空**：计算时长，生成 9 张等间隔截图。<br>3. **若非空**：加载现有截图。 | 将截图按 5px 间隔排列，下方绘制进度条                        |
 | **播放/跳转** | 视频播放或拖动进度 | 当视频播放或进度改变时，系统实时获取当前播放时间点（Current Time），遍历所有截图的时间戳，**找出与当前时间点差值最小的那张截图** | **高亮**：该目标截图立即显示**红色内边框**。<br> **居中**：轨道容器自动滚动，将该目标截图置于显示区域的**正中间**。 |
-| **点击截图**  | 单击某张截图       | 获取该截图对应的时间戳 `TimgTimg`，设置播放器进度为 `TimgTimg`。 | 视频画面跳转至对应帧。                                       |
+| **点击截图**  | 单击某张截图       | 1. 解析该截图文件名中的时间戳字段（如 1500_m.webp 解析为 1500ms）。<br/>2. 将播放器进度（CurrentTime）跳转至该时间点。 | 1. 视频画面瞬移至对应帧。<br/>2. 恢复“自动居中”逻辑（如果之前被挂起）。 |
 | **右键菜单**  | 右键单击截图       | 弹出菜单：<br>1. **设为封面**：更新封面逻辑。<br>2. **删除**：删除物理文件。 | 菜单弹出。                                                   |
 | **删除截图**  | 点击“删除”         | 1. 删除对应的 .webp 文件。<br>2. 检查剩余截图数量。<br>3. **若数量为 0**：重新触发“自动生成 9 张”逻辑。 | 1.该截图从轨道消失。<br>2.若删空，瞬间重新加载 9 张新图。    |
-
-### 5. 数据与配置
-
-- **存储路径**：Data/screenshot/[Video_Hash]/。
-- **文件名**：i_[Timestamp_MS].webp（i + 下划线 + 毫秒时间戳）。
-- **自动生成特性**：
-  - 自动生成的截图与用户手动截图在文件层面无区别，逻辑上同权。
 
 ### 6. 注意事项
 
 1. **视口自适应**：截图轨道的高度固定，宽度随主窗口变化。
+
 2. **性能优化**：
+
    - 从磁盘读取原图，内存变为缩略图展示。
    - **实时调整居中截图**：当用户正在手动拖动截图轨道查看预览时，应立即执行“自动居中”逻辑
    - 若用户主动拖动轨道，此时正好触发“自动居中”逻辑，中断推动，立即执行“自动居中”逻辑
-3. **旋转一致性**：
+   
+3. **交互冲突与防抖处理 (Interaction & Debounce)**
+
+   为了防止用户在拖拽寻找截图时被自动跟随逻辑打断，采用 **“浏览态保持 + 延迟归位”** 策略：
+
+   1. **挂起跟随 (Suspend)**：
+      - 当检测到用户在轨道上 **按下鼠标 (MouseDown)** 时，立即停止“自动居中”功能。此时视频继续播放，但轨道不再滚动。
+   2. **浏览态保持 (Browsing Hold)**：
+      - 当用户 **抬起鼠标 (MouseUp)** 后，**不要立即恢复居中**。
+      - 系统应保持当前轨道位置静止，并启动一个 **3000ms (3秒) 的无操作计时器**。
+      - **目的**：给予用户充足的时间去寻找并点击目标截图，防止轨道瞬间跳走。
+   3. **恢复同步 (Resume Sync)**：
+      - **情况 A（用户点击跳转）**：用户点击了某张截图 -> 立即取消计时器，视频跳转，并将**被点击的截图**居中，随后恢复正常的播放跟随模式。
+      - **情况 B（超时）**：用户在 3秒内无任何操作 -> 轨道平滑滚动回**当前视频播放点**的高亮截图。
+   
+4. **旋转一致性**：
    - 截图文件本身是原始方向（Raw Data）。
    - 轨道显示时，必须叠加视频的 Rotation 属性，确保预览方向与视频播放方向一致（例如视频竖屏播放，截图也应竖着放）。
