--- a/需求.md
+++ b/需求.md
@@ -1,66 +1,33 @@
-
-第三个功能是跳帧播放。软件启动的时候会读取data/setting.JSON中skip_frame字段，这个字段是一个object，Key是视频的时长。Value是要分成的多少等间隔时间点。Key的形式，1分钟之内的配置是小于60的数加上一个s，1分钟以上的就是一个整数加上一个m来表示分钟。多个配置元素就能形成多个区间。每个区间的时间是向下的。默认配置，零代表了当前时间及到前一个时间之间不分成多个片段直接正常播放。最大1万 m。因为不可能有视频能超过10000分钟。所以也就是从120分钟到10000分钟之间都是60段。这种模模式的播放方式就是播放器将视频分成n时间点，只播放这个时间点的帧画面。每个画面停留2秒钟。这个2秒钟是可以在setting.JSON里面配置的。与之相对应的是正常视频播放模式，这个模式就是正常播放。模式切换是有一个切换按钮来控制的。这个切换按钮是一个icon按钮，当时跳帧播放模式的时候icon是一个等距离的三条竖线。当时正常模式的时候，Icon是一个向右指的箭头。当视频在播放了一定进度的时候，用户切换了模式。就是从当前时间开始。执行跳转模式播放。在这种情况下跳帧播放。也是对整个视频分n个时间点。不是对剩余部分的视频分n个时间点。这个模式选择会得之后播放的视频一直有效，除非用户选择更改模式。这个模式会被记录在setting.json里面。下次启动的时候使用上一次的模式。这个模式位于播放模式的按钮后面。
-
-第四个功能是步进功能。步进功能是有一个步进速率的按钮。来控制步进速率的。不仅速率只有两个，一个是帧一个是秒。这个按钮是一个文字按钮。当当前的步进速率是真的时候。就显示一个帧字。当当前步履进速度是一个秒的时候就使用秒这个字。然后用户可以使用A和d键来快退快进视频。这个功能是为了配合截图使用的，就是要找到最好的那一帧。这个按钮位于跳针播放按钮的后面。
-
-第5个功能是裁剪功能。这个功能的区域在播放控制区的下面。用户使用快捷键，但是这块区域显示，这块区域是一个长条状的区域。这块区域的总长度就是对应的视频的总长度。在这个区域刚显示的时候，整个区域可以视作只有一个clip。用户可以在视频播放的任意时刻按一下快捷键Q，在这个时间点将这个时间点所在的clip一分为二。可以被q键多次分割。clip有两个状态，一个状态是删除，一个状态是保留。两个状态是互斥的。用户可以通过单击来选中clip，以下clip我都用片段来的中文来代替clip这个词。用户可以通过双击来使片段的状态切换，当片段被选中的时候，用户如果按下了delete键，就会删除这个片段。删除的语义其实就是左右边的片段合并成一个片段。合并后的片段以左边的片段的状态为准。最开头的片段，只向右合并一个片段。末尾的片段指向左合并一个片段。这个区域同时也是一个视频进度管理的进度条。当用户点击任何一个片段的时候，视频将进度重置到这个片段开始对应的视频进度时间。这个操作不会影响当前视频是暂停还是播放的状态。这个长条区域的最右端有一个按钮是执行按钮。执行的意思就是把要保留的片段合并成一个视频。将原视频移动到已编辑目。已编辑目录是在setting.jason里面配置的。然后把裁剪过的视频。以原文件的名字命名放到之前原视频所在的路径。这里面有一个需要确认的过程。裁剪的部分有对应截图的话不能执行裁剪。刚点击裁剪按钮的时候，会弹出来一个框确认，如果有截图的话，会在确认框里面提示有截图。如果可以成功裁剪的话，重新计算哈希。如果flies里面有这个文件的元数据，就需要修改那个哈希值。如果这个文件有截图的话就需要用现在的哈希值去修改之前截图文件夹名那个hash。同时修改封面文件下吓得对应的封面文件名字。裁剪轨道出现的时候，应该会把播放控制区往上顶，视口适当缩小。
-
- 下一个功能是封面，只有在视频会出现在各种列表的时候，这个视频才需要封面。正常的随机或播放的视频。没有必要产生封面。当当一个文件需要出现在一个文件列表中的时候，去covers。文件介绍下找对应的封面图片，如果没有的话就会自动生成一个。文件哈希加下划线d形成的文件名的文件。这个是默认生成的。不会被删除。这个默认封面就是视频时长20%的地方。同时用户可以在截图轨道上。手动设置这个视频的封面。手动设置的封面是不加下划线地的。玩家手动设置了封面之后，默认的那个封面也不会被删除。当视频出现在任意文件列表的时候，显示封面的逻辑就是优先找。用户手动设置的封面，找不到就找默认的，再找不到就截图。保存这张张默认的，然后使用默认的封面。
-
-下一个功能叫待删除功能。当视频在播放的时候，用户可以按一下ctrl delete键。删除视频，但是这个视频不会被直接删除，而是会遇到一个在setting里面配置的待删除文件夹的。目录下面。
-
-下一个功能是点赞。点赞功能的按钮位于收藏按钮的后面，点赞是可以累一点的，每点一次。数量加一。点赞图标的右上角会显示当前点赞的次数。如果一个被点赞过的视频在本次播放的时候没有被点赞。当视频播放完的时候或者用户播放下一个视频了，点赞数会被减0.2。点赞数的最小数量是零。就是说点赞数只会被减到零。这个功能的目的是为了用户每次看的时候他都喜欢。他都会去点赞，那就代表着这个视频的价值很高。如果某一次他看到了，但是他没有去点赞说明他给这个视频看腻了。通过这种反反复复的点赞和减少点赞数。上显示的时候只会显示整数部分。点赞页面是一个汇集了所有被点赞的视频的页面。这个页面的布局是左侧是一个竖着的区域。所有点赞的视频。使用他的点赞数。从高往低排序。将最高点赞数和零之间平均分成10段，分别统计落在这10段中的视频。相当于是一个归类。如果某一段为没有视频。就剔除这个分段。剩下的分段显示在左侧的。竖着的区域里。右边是视频文件展示的区域，以缩略图的形式展示。排布就是一行。分数段的最高分和最低分组成的标题。然后下面就是这个分数段下载的视频，然后紧跟着就是下一个分数段的标题和视频格子区域。右边的视图是连续的。左边的分数段列表更像是一个点击直接跳转的滚动条。如果是从播放器页面进入到当前页面的话播放器如果正在播放视频，需要被暂停。双击视频缩略图直接跳转回播放器页面。直接开始播放。
-
-下一个功能是精品功能。精品功能其实就是一个收藏功能。精品功能的按钮位于点赞按钮的前面。如果一个视频被收藏了，这这个视频就会显示黄色五角星。如果一个视频没有被收藏，就会显示一个空心的五角星。五角星可以在收藏和取消收藏直接切换。精品页面标签按钮位于播放器按钮的后面。精品页面的表现方式就是以缩略图的形式展示视频。是一个Grid的方式展示的。
-
-
-还有一个功能是文件名字和时长。在软件的标题栏中中间的位置，显示文件的名字和时长。文件名字的显示区域是一个动态变化的长度。他的参数的计算得来就是减去左边页签按钮部分。再减去右边的放大，缩小，关闭按钮。与左右两边的UI元素组保持一定的距离。如果这个长度依然不能显示文本的视频名字的所有内容。那就隐藏掉一部分视频名字。
-
-
-下一个功能是最近播放列表功能。最近播放列表的标签页按钮位于点赞页面标签也按钮的后面。就是最近播放的50个视频的列表。最多只保留50个。列表序列号后的文件保存在data吓得Recent.jason里面。这个页面是以缩略图的形式显示的。
-
-下一个是文件名搜索，这个文就是拿文件名来模糊匹配文件，这个页面的是以文件名的形式显示的，不显示缩略图。形式就是个一行一行的文件名的列表。这个功能的页签按钮位于标签搜索按钮后面。
-
-下一个功能是音量控制。音量控制按钮位于视频进度调到后面。直接显示一个短的进度条就好了。音量设置会被储存在setting.json中。
-
-下一个是刷新功能。因为在软件启动的时候只遍历获取了视频文件的创建时间和路径两项。这两项足以支撑随机播放和创建时间优先播放的播放模式。刷新的时候会去读取所有文件的创建时间和路径以及计算它的哈希值。是有四种情况，第一种情况是新增就这种情况。用户的数据不会有任何变化。第二种情况是移动和重命名。使用哈希和用户数据里面的files.JSON中的元数据重绑定。第三种情况是删除和文件内容发生变化，这种情况是从从file.json中的元数据，反向去找文件是否存在如果找不到文件存在，就把原数据中的数据删掉。第四种是发现了内容一致的文件。就在File.js中将原数据对应的节点的Paths中如果不存在这个路径的话，就追加一个路径。这个刷新使用F5刷新的。没有快捷键。刷新功能启动的时候，会切换一个覆盖整个软件视窗的页面。一个进度条进度条的下方。是当前正在扫描的文件。每隔100个变化一次当前扫描的文件夹名，因为扫描很快。所以这个文件名一直变也不太好。
-
-下一个功能是关于视频窗口的自适应适应方案。如果视频原始的分辨率小于720p，在视频显示区域的视口就是按720p，然后视频使用content模式。去填充这个视口。视口的定义是视频显示区域。如果视频的分辨率超过了。视口所能表达的最大分辨率的话，就按视口的分辨率来定义视口的大小。 其他情况就按视频的分辨率来定义视口的大小。
-
-下一个功能视频旋转。视频旋转位于进度条到后面的后面。按钮是一个显示数字的按钮，是以正时针计算的。会显示零。九十，180，270。点击一下，就是重置到零。使用k键来顺时钟，每次旋转90度。这个功能的配置会写入到元数据中，这个是随视频文件的。
-
-软件启动流程，软件启动只会去读取文件的。创建时间和文件路径。有了这两个就足够支撑随机播放和创建时间优先播放。已处理和待删除两个
-
-
-
-去掉播放模式的选择。播放模式改为这样软件启动的时候，就是随机播放模式。上面的功能还会形成几个列表。最近列表，标签搜索出来的列表，最新视频的列表100个。收藏列表和点赞列表。从这几个列表中点击任何视频。都会将播放器置于该列表。播放器后面的。播放列表的状态按钮显示成对应的列表。单击这个按钮。就是从任意列表状态切换成随机列表状态。当用户从以上的几个列表中点击一个视频进入的时候，该视频播放完之后就会自动播放下一个视频。播放到列表里的时候，会从开头继续播放。Setting文件中不再记录。播放列表的模式。之前说的播放模式。现在改成播放列表的说法。
-
-
-
-换句话说就是这个软件它的内部其实维护了几个播放列表。随机播放列表为默认列表。他几个列表都是从对应的列表页点击视频来完成列表切换的。
-
-
-
-Setting中的初始的几个路径都是空的。当软件启动的时候，检查到任意路径为空。会先进入一个路径设置页面。配置这四个路径。
-
-再增加一个设置界面
-
-
-
-再加入一个录制功能。就是从当前帧开始录制。然后点击停止按钮的时候停止。录制和停止是一个按钮。视频是v加下划线加时间戳。
-
-再加入一个文件。总大小的统计。
-
-
-
 在代码实现上，files和tags这两个文件读取和写入，应该有一层抽象，这两个文件也有可能之后会迁移到数据库吧。
 
+一个通用部分。在分配，创建，搜索的时候都能用到的就是过滤标签，过滤标签的UI布局是最左列有一个可以上下滚动的。标签分组列表，右边是主视图区，也是一个可以上下滚动的，在这个区域内的目的是一行标签分组名称。然后是他下面的图片标签。接着是文本标签。然后就是下一行另一个分组名称。
+
+这个快捷键有些是跟着页面显示与否来判断它的作用
 
 
-编辑轨道改造一下，一个clip如果被标记为要删除。如果这个要被删除的clip。要在这个区间内的截图，那就给这个clip上加一个警告的icon。
 
 
 
-同时鼠标放在上面的话，会把这个clip上对应的截图显示在clip的提示区域。最多显示了三张。
+移除toast的具体描述，仅说明 使用toast 给出提示就行。
+
+和 前面的文件的内容对比，有遗漏和矛盾的以前面文件为准
 
 
+
+播放控制区
+
+随机，跳帧模式按钮，grap，截图轨道进度条，下一个，步进速率按钮，视频旋转，精品，点赞，
+
+
+
+无按钮
+
+音量，截图导出，视频录制按钮，删除，刷新
+
+
+
+
+
+页面导航按钮
+
+设置
