--- a/功能/列表 - 最新.md
+++ b/功能/列表 - 最新.md
@@ -1,70 +1,84 @@
-
-基于您提供的文件内容，以下是关于**最新列表（最新视频列表）**功能的详细说明文档：
-
-### 1. 痛点与动机
-
-- 
-- **痛点**：用户刚才下载或添加了新视频，想要立刻观看，但文件夹层级复杂，难以快速定位到这些新文件。
-- **动机**：基于文件创建时间，提供一个快速入口，让用户能直接接触到库中最新添加的内容，无需在文件管理器中翻找。
-
-### 2. 用户可用功能
-
-- 
-- **浏览最新视频**：提供一个专门的列表视图，展示系统中创建时间最近的 **100个** 视频。
-- **列表播放**：用户从该列表中点击任意视频开始播放，播放器将进入“最新列表播放模式”。
-- **自动续播**：当前视频播放结束后，自动播放该列表中的下一个视频（按时间顺序）。
-- **循环播放**：当列表播放到末尾时，会自动从列表开头继续播放。
-- **一键退出**：在播放该列表时，可通过点击状态按钮一键切换回默认的随机播放模式。
-
-### 3. 相关的 setting 配置
-
-- 
-- **无直接配置**：该列表的容量（100个）在需求中是固定的，未提及可配置项。
-- **间接依赖**：依赖于软件启动时扫描的文件夹路径（在初始设置页面或 setting.json 中配置的路径），以及文件的系统创建时间属性。
-
-### 4. 相关快捷键
-
-- 
-- **无**
-
-### 5. UI 按钮
-
-- 
-- **列表入口按钮**：
-  - 
-  - *位置*：位于主界面的标签页导航栏中（文档未明确其相对具体顺序，但隐含与其他列表如点赞、收藏、最近播放并列）。
-- **播放列表状态按钮**：
-  - 
-  - *位置*：位于播放器后方（功能区）。
-  - *样式*：当正在播放最新列表中的视频时，该按钮显示为“最新/优先播放”相关的 Icon。
-  - *交互*：点击该按钮，播放模式切换回随机播放，Icon 变为随机图标。
-
-### 6. 用户操作、内部逻辑、UI 变化、数据变化
-
-
-
-
-
-
-
-
-
-
-
-
-
-| 场景         | 用户操作                   | 内部逻辑                                                     | UI 变化                                                      | 数据变化                       |
-| ------------ | -------------------------- | ------------------------------------------------------------ | ------------------------------------------------------------ | ------------------------------ |
-| **列表生成** | 软件启动或刷新(F5)         | 1. 遍历配置路径下的所有视频文件。<br>2. 获取文件的创建时间。<br>3. 按创建时间倒序排列。<br>4. 截取前 100 个文件形成“最新列表”。 | 无直接UI变化（后台数据准备）。                               | 内存中更新最新视频列表数据。   |
-| **进入播放** | 在“最新列表”页面点击某视频 | 1. 将当前播放队列上下文切换为“最新列表”。<br>2. 加载被点击的视频。 | 1. 播放器开始播放视频。<br>2. **播放列表状态按钮**更新为对应图标。 | 当前活跃列表指针指向最新列表。 |
-| **自动续播** | 当前视频播放结束           | 1. 获取最新列表中当前视频的下一个索引。<br>2. 如果是列表末尾，则跳转至索引0。<br>3. 加载该视频。 | 播放器自动加载并播放下一条内容。                             | 无持久化数据变化。             |
-| **退出列表** | 单击“播放列表状态按钮”     | 1. 将播放队列上下文重置为“随机列表”。                        | 按钮图标变为“随机播放”。                                     | 活跃列表切换为全局随机池。     |
-
-### 7. 默认状态下 UI 文字描述
-
-- 
-- **整体位置**：该功能主要以**列表页面**和**播放状态图标**的形式存在。
-- **布局与描述**：
-  - 
-  - 在播放器处于该模式时，**播放列表状态按钮**（位于播放器后方）会显示代表“最新/创建时间优先”的图标，以提示用户当前正在按时间顺序播放新文件，而非随机播放。
-  - 该列表本身包含最多 100 个视频项。
+- - ### 1. 痛点与动机
+  
+    - 
+    - **痛点**：
+      - 
+      - 用户刚下载或导入了一批新视频，想要立刻观看这批新内容。
+      - 在海量视频的“随机播放”模式下，很难快速“随”到刚刚入库的新视频。
+      - 文件名搜索需要用户记得新文件的名字，不够直观。
+    - **动机**：
+      - 
+      - 提供一个基于**文件创建时间**的自动筛选器。
+      - 聚焦于“鲜度”，让用户能零成本地直接消费最新入库的内容。
+      - 限制数量（100个），保持列表的精简和时效性。
+  
+    ### 2. 功能概要
+  
+    - 
+    - **自动聚合**：无需手动添加，软件根据文件的创建时间自动排序。
+    - **容量限制**：动态截取所有视频中创建时间最近的 **100** 个视频。
+    - **网格展示**：以缩略图形式直观展示。
+    - **列表联动**：支持从该列表进入，按时间顺序（由新到旧）连续播放。
+  
+    ### 3. 数据来源与排序
+  
+    - 
+    - **数据来源**：
+      - 
+      - 基于软件启动时扫描获取的 creation_time（创建时间）和 file_path。
+      - 或者基于 **F5 刷新** 功能深度扫描后更新的元数据。
+    - **排序逻辑**：
+      - 
+      - **Key**：文件创建时间（Creation Time）。
+      - **Order**：倒序（Descending），即最新的在最前面。
+      - **Limit**：Top 100。
+    - **刷新机制**：
+      - 
+      - **软件启动时**：快速遍历目录下文件的创建时间，构建初始列表。
+      - **F5 刷新时**：执行完整的哈希比对和元数据同步。
+        - 
+        - **新增文件**：直接加入排序池。
+        - **移动/重命名**：通过哈希重绑定元数据，但其“创建时间”属性依然保留（或读取文件系统的新时间，视操作系统行为而定），依然参与排序。
+  
+    ### 4. UI 说明
+  
+    #### 4.1 入口位置
+  
+    - 
+    - 此列表属于核心列表组之一（随机、收藏、点赞、最近、最新、搜索）。
+    - 具体位置通常位于 **标签搜索按钮** 之后或 **最近播放列表** 附近（根据具体 UI 布局流确定）。
+  
+    #### 4.2 列表页面 (The Newest Page)
+  
+    - 
+    - **布局模式**：**Grid 网格视图**。
+      - 
+      - 统一采用缩略图平铺。
+    - **显示内容**：
+      - 
+      - 视频缩略图。
+      - 视频文件名。
+      - （可选）显示“X小时前”或“日期”标签以强调新旧程度。
+    - **交互**：
+      - 
+      - **双击缩略图**：跳转回播放器页面，并立即开始播放该视频。
+  
+    ### 5. 核心逻辑细节
+  
+    #### 5.1 播放列表联动
+  
+    - 
+    - **上下文切换**：
+      - 
+      - 当用户在“最新列表”页面双击视频时：
+        1. 
+        2. 播放器加载该视频。
+        3. 内部播放列表状态切换为 **“最新列表”**。
+        4. 播放结束后的行为：自动播放列表中的下一个视频（即**时间线上次新**的那个视频）。
+  
+    #### 5.2 与“刷新”功能的配合
+  
+    - 
+    - “最新列表”对 **F5 刷新** 功能高度敏感。
+    - 当用户放入新文件到目录后，必须重启软件或按下 F5 触发刷新，新文件被识别为“新增（Case 1）”后，才会出现在此列表中。
+    - 如果是“重命名”或“移动”文件（Case 2），虽然文件路径变了，但只要文件系统的创建时间未变，它在最新列表中的位置可能不会剧烈变化（取决于是否按“修改时间”或“入库时间”排序，一般默认按文件属性的创建时间）。
