--- a/功能/列表 - 点赞.md
+++ b/功能/列表 - 点赞.md
@@ -1,125 +1,118 @@
-- - ### 1. 痛点与动机
-  
-    - 
-    - **痛点**：
-      - 
-      - 传统的“收藏”功能是二元的（要么收藏要么不收藏），无法区分“非常喜欢”和“一般喜欢”。
-      - 随着时间推移，用户的口味会发生变化，某些曾经喜欢的视频可能已经看腻了，但手动取消收藏的操作成本较高。
-      - 缺乏一种机制来动态筛选出用户当前真正感兴趣的高价值内容。
-    - **动机**：
-      - 
-      - 引入**累积计分制**（点赞数），通过高频互动筛选出核心高价值视频。
-      - 引入**自动热度衰减**机制，如果视频被观看但未获得互动，说明吸引力下降，自动降低权重。
-      - 提供基于分数的**分段聚合视图**，让用户能直观地浏览不同喜爱程度的视频梯队。
-  
-    ### 2. 功能概要
-  
-    - 
-    - **累积点赞**：在视频播放期间，用户可多次点击点赞，分数累加。
-    - **热度衰减**：若视频在一次完整的播放会话中未获得点赞，结束后分数自动衰减（“优胜劣汰”）。
-    - **动态分段展示**：点赞列表页面根据当前所有视频的最高分，自动划分为 10 个热度区间进行归类展示。
-    - **可视化反馈**：播放器按钮实时显示点赞数；点赞页面以热度图谱形式展示内容。
-  
-    ### 3. Setting 配置与数据存储
-  
-    - 
-    - **配置文件** (setting.json)：
-      - 
-      - like_decay_rate (float): 衰减系数，默认为 **0.2**。
-    - **元数据文件** (files.json / metadata)：
-      - 
-      - like_count (float): 记录视频的点赞分数。精确到小数点后一位，UI 显示时取整。
-    - **数据逻辑**：
-      - 
-      - **下限控制**：点赞数最低衰减至 **1**（不再像旧逻辑那样归零）。这意味着一旦点赞过，至少保留 1 分，除非用户手动重置或删除。
-  
-    ### 4. 快捷键与交互
-  
-    - 
-    - **点赞操作**：
-      - 
-      - **交互**：点击“点赞”按钮（位于收藏按钮后）。
-      - **反馈**：
-        - 
-        - 图标右上角 Badge 数字 +1。
-        - 允许连续点击，每点击一次，like_count +1。
-    - **进入点赞列表**：
-      - 
-      - **交互**：点击主界面顶部的“点赞”页签（位于最近播放页签前）。
-      - **逻辑**：若播放器正在播放，进入该页面时自动**暂停**视频。
-  
-    ### 5. 核心逻辑细节
-  
-    #### 5.1 增加机制
-  
-    - 
-    - **触发条件**：用户在播放过程中点击点赞按钮。
-    - **计算**：New Score = Current Score + 1。
-    - **状态标记**：在内存中标记当前播放会话为 is_liked_in_session = true。
-  
-    #### 5.2 衰减机制
-  
-    - 
-    - **触发条件**：
-      - 
-      - 视频播放结束（自然播完）。
-      - 用户点击“下一个”或切换到其他视频。
-    - **判断逻辑**：
-      - 
-      - 检查 is_liked_in_session。
-      - **若为 True**（本次已点赞）：不进行衰减，保留增加后的分数。
-      - **若为 False**（本次“白嫖”）：执行衰减。
-        - 
-        - New Score = Current Score - like_decay_rate。
-        - **边界检查**：若 New Score < 1，则 New Score = 1。
-  
-    #### 5.3 显示逻辑
-  
-    - 
-    - **取整**：虽然后台存储浮点数（如 10.8），但在 UI 上（按钮 Badge、列表标题）只显示**整数部分**（Floor 或 Round 均可，建议向下取整以刺激用户点击）。
-  
-    ### 6. UI 说明
-  
-    #### 6.1 播放控制区
-  
-    - 
-    - **位置**：收藏按钮之后。
-    - **样式**：点赞图标（如大拇指），图标右上角悬浮显示当前点赞数（Badge）。
-  
-    #### 6.2 点赞列表页面 (The Like Page)
-  
-    此页面采用 **左侧导航 + 右侧内容** 的布局：
-  
-    - 
-    - **左侧：热度分段导航**
-      - 
-      - **计算方式**：获取所有视频中的 Max Score。将 [1, Max Score] 区间平均分为 10 个段（Segment）。
-      - **过滤**：如果某个分数段内没有视频，则该段不显示在列表中。
-      - **排序**：从高分段到低分段垂直排列。
-      - **交互**：点击某个分段，右侧视图滚动锚点到对应的标题位置。
-    - **右侧：视频平铺区域**
-      - 
-      - **布局**：连续流式布局（Flow）。
-      - **结构**：
-        - 
-        - **标题行**：显示当前分段范围（例如 "Score: 90 - 100"）。
-        - **Grid 网格**：该分段下的视频缩略图。
-        - （紧接着）下一个分段的标题及网格...
-      - **视频单元**：显示缩略图、文件名、当前分数。
-      - **交互**：双击缩略图 -> 跳转回播放器页面 -> 立即开始播放该视频。
-  
-    ### 7. 数据处理细节
-  
-    - 
-    - **列表刷新**：
-      - 
-      - 每次进入点赞页面时，需重新读取内存中的视频数据，重新计算最高分，重新划分 10 个区间，并渲染列表。
-    - **排序规则**：
-      - 
-      - 左侧分段：按分数区间降序。
-      - 右侧网格内：同一分数段内的视频，按具体分数降序排列；分数相同时按文件名或创建时间排序。
-    - **列表联动**：
-      - 
-      - 此页面属于“播放列表”的一种。
-      - 当用户在点赞列表中双击视频播放时，播放器的“播放列表状态”切换为“点赞列表”。
-      - 播放结束后，自动播放该列表排序中的下一个视频。
+### 1. 痛点与动机 (Pain Points & Motivations)
+
+- **痛点**:
+  - 传统的“收藏”功能是二元的（收藏/未收藏），无法表达“一般喜欢”与“非常喜欢”的程度差异，更无法表达“不喜欢”。
+  - 用户的兴趣会随时间动态变化，旧的喜爱内容可能失去吸引力，但缺乏自动化的权重调整机制。
+  - 内容库增大后，难以从大量视频中快速筛选出当前真正感兴趣的“宝藏”或需要规避的“雷区”。
+- **动机**:
+  - 引入**双向累积计分制**（点赞/不喜欢），通过高频互动精确筛选出用户偏好的核心内容。
+  - 引入**自动热度衰减**机制，对已点赞但后续被“冷落”的视频自动降权，模拟兴趣的自然遗忘曲线。
+  - 提供基于正负分数的**分段聚合视图**，让用户能直观地浏览从“挚爱”到“厌恶”的不同内容梯队。
+
+### 2. 功能概要 (Feature Overview)
+
+- **双向评分**：同一个按钮，通过 点击 实现点赞累加，通过 Ctrl + 点击 实现不喜欢减分。
+- **热度衰减**：若一个**分数大于1**的视频在一次完整的播放会话中未获得任何评分互动，其分数将自动轻微衰减，但最低只会衰减至1。
+- **动态分段展示**：点赞列表页面根据当前所有视频的正负最高分，自动将正分区间和负分区间各划分为10个热度段进行归类。
+- **可视化反馈**：播放器按钮根据分数（正/零/负）呈现三种不同颜色和图标（👍/👎），并实时显示分数；评分操作伴有流畅的动画效果。
+- **列表管理**：在点赞列表中，用户可以直接选中一个或多个视频，并通过快捷键 Ctrl + Delete 将其软删除。
+
+### 3. Setting 配置与数据存储 (Configuration & Data Storage)
+
+- **配置文件** (setting.json):
+  - like_decay_rate (float): 衰减系数，默认为 **0.2**。
+- **元数据文件** (files.json):
+  - like_count (float): 记录视频的点赞分数，可为正、负或零。后台精确到小数，UI显示时取整。
+- **数据逻辑**:
+  - **自然衰减下限**: 自动衰减过程不会使视频分数低于 **1**。一旦视频被点赞过，它将永久保留至少1分，除非被手动“不喜欢”。
+  - **手动操作无下限**: “不喜欢”操作可以将分数降至0或任意负数。
+
+### 4. 快捷键与交互 (Shortcuts & Interaction)
+
+- **评分操作**:
+  - **交互**:
+    - **点赞**: 单击 点赞按钮。
+    - **不喜欢**: Ctrl + 单击 点赞按钮。
+  - **反馈**:
+    - 无 Toast 提示。
+    - 按钮图标和背景色根据分数正负零状态变化。
+    - 分数数字 Badge 发生变化，伴随流畅的动画效果（如翻页、缩放等）。
+    - 允许连续操作，分数实时累加或累减。
+- **进入点赞列表**:
+  - **交互**: 点击主界面顶部的“点赞”页签。
+  - **逻辑**: 若播放器正在播放，进入该页面时将自动**暂停**当前视频。
+
+### 5. 核心逻辑细节 (Core Logic Details)
+
+#### 5.1 点赞机制 (Like)
+
+- **触发条件**: 用户 单击 点赞按钮。
+- **计算**: New Score = Current Score + 1。
+- **状态标记**: 在内存中标记当前播放会话为 is_interacted_in_session = true。
+
+#### 5.2 不喜欢机制 (Dislike)
+
+- **触发条件**: 用户 Ctrl + 单击 点赞按钮。
+- **计算**:
+  - **特殊规则**: 如果当前分数 1 <= Current Score < 2，则 New Score = 0。（避免产生0.x这样的小数，直接归零）
+  - **通用规则**: 在其他情况下，New Score = Current Score - 1。
+- **状态标记**: 在内存中标记当前播放会话为 is_interacted_in_session = true。
+
+#### 5.3 衰减机制 (Decay)
+
+- **触发条件**:
+  - 视频播放结束（自然播完）。
+  - 用户切换到其他视频。
+- **判断逻辑**:
+  - 检查 is_interacted_in_session 标志。
+  - **若为 True** (本次已评分): 不执行任何操作，分数保持不变。
+  - **若为 False** (本次未评分) **且 Current Score > 1**:
+    - New Score = Current Score - like_decay_rate。
+    - **边界检查**: 若计算后 New Score < 1，则 New Score = 1。
+
+#### 5.4 显示逻辑 (Display Logic)
+
+- **分数取整**: 后台存储浮点数（如 10.8, -5.2），UI上（按钮 Badge、列表）显示时**向下取整**的绝对值（10,  -5）。
+- **按钮三态**:
+  - **Score > 0**: 图标为 **👍 (大拇指向上)**，显示正整数，背景为**激活/积极**颜色。
+  - **Score == 0**: 图标为 **👍 (大拇指向上)**，**不显示数字**，背景为**中性/默认**颜色。
+  - **Score < 0**: 图标为 **👎 (大拇指向下)**，显示负分绝对值的整数，背景为**抑制/消极**颜色。
+
+### 6. UI 说明 (UI Description)
+
+#### 6.1 播放控制区 (Playback Controls)
+
+- **位置**: 精品按钮后面。
+- **样式**: 根据分数呈现上述三态变化，右上角悬浮显示分数的 Badge。所有状态变化均有平滑的过渡动画。
+
+#### 6.2 点赞列表页面 (The Like Page)
+
+采用 **左侧导航 + 右侧内容** 的布局：
+
+- **左侧：热度分段导航 (Heat Segments Navigation)**
+  - **计算方式**: 获取所有视频中的 Max Score 和 Min Score。
+    - **正分段**: 将 [1, Max Score] 区间平均分为10个段。
+    - **负分段**: 将 [Min Score, -1] 区间平均分为10个段。
+  - **过滤**: 如果某个分数段内没有视频，则该段不显示在导航中。
+  - **排序**: 从高到低垂直排列，即：正分段（高->低），然后是负分段（高->低，即 -1 -> Min Score）。
+  - **交互**: 点击某个分段，右侧内容区平滑滚动并定位到对应的标题行。
+- **右侧：视频平铺区域 (Video Grid Area)**
+  - **布局**: 连续的流式布局。
+  - **结构**: 按分段组织，每个分段包含一个标题行和其下的视频网格。
+    - **标题行**: 显示当前分段范围 (例如 "Score: 90 ~ 100" 或 "Score: -1 ~ -10")。
+    - **Grid 网格**: 对应分段下的视频缩略图。
+  - **视频单元**: 仅显示视频缩略图和当前分数。**不显示文件名**。
+  - **交互**:
+    - 双击 缩略图 -> 跳转回播放器页面并立即播放该视频。
+    - 支持 单击、Ctrl+单击、Shift+单击 进行多选，选中项有视觉反馈。
+    - 选中视频后，按下 Ctrl + Delete 可执行软删除。
+
+### 7. 数据处理细节 (Data Handling Details)
+
+- **列表刷新**: 每次进入点赞页面时，都需重新扫描所有视频元数据，计算 Max Score 和 Min Score，然后动态生成分段并渲染整个列表。
+- **排序规则**:
+  - 左侧分段：按分数区间降序排列。
+  - 右侧网格内：同一分数段内的视频，按其**具体分数降序**排列。分数相同时，排序不作要求。
+- **列表联动**:
+  - 此页面视为一个动态播放列表。当用户双击播放视频时，播放器的播放队列将切换为“点赞列表”的当前排序状态。
+  - 视频播放结束后，将自动播放当前分段排序中的下一个视频。
