--- a/功能/截图 - 短视频.md
+++ b/功能/截图 - 短视频.md
@@ -1,101 +1,92 @@
-### 1. 痛点与动机
+### 1. 痛点与动机 (Pain Points & Motivations)
 
-- 
-- **痛点**：
-  - 
-  - 有些精彩瞬间是动态的（如一段搞笑对话、一个动作连招），静态截图无法完整表达神韵。
-  - 使用外部录屏软件步骤繁琐，且很难精确卡点录制当前视频的特定片段。
-- **动机**：
-  - 
-  - 提供**“所见即所得”**的流式录制能力。
-  - 将短视频片段视为“动态截图”，与静态截图纳入统一的管理和导出体系，方便素材收集。
+- **痛点**：静态截图无法捕捉动态瞬间；外部录屏软件操作繁琐，与播放器脱节。
+- **动机**：提供一种无缝集成的、**沉浸式**的视频片段录制体验，确保用户在捕捉素材时不受干扰，并且录制前后播放器状态保持一致。
 
-### 2. 功能概要
+### 2. 功能概要 (Feature Overview)
 
-- 
-- **即时录制**：从当前播放帧开始录制，再次点击按钮停止。
-- **UI 反馈**：视口右上角实时显示录制时长。
-- **统一存储**：录制的视频文件与截图文件存储在同一目录下。
-- **联动导出**：使用截图导出功能（Alt+E）时，录制的视频片段也会被一并导出。
+- **纯快捷键驱动**：无UI按钮，完全通过快捷键 R (开始/停止) 和 Shift+R (取消) 控制。
+- **专注录制模式**：一旦开始录制，应用将进入一个“锁定”状态，禁用所有其他快捷键和UI交互，让用户专注于录制过程。
+- **状态保存与恢复**：系统会自动记录录制前的播放模式（如“跳帧模式”），在录制期间切换到标准播放，录制结束后无缝恢复到之前的模式。
+- **自动结束机制**：若录制过程中视频自然播放完毕，系统将自动停止并保存录制，无需用户干预。
+- **统一存储与导出**：录制的视频片段与截图文件统一管理，并集成到现有的素材导出流程中。
 
-### 3. 数据存储与命名规范
+### 3. 核心配置与数据存储 (Core Configuration & Data Storage)
 
-- 
-- **存储路径**：Data/screenshot/[Video_Hash]/。
-  - 
-  - 与静态截图（i_xxx.webp）完全共用同一个文件夹。
-- **文件命名逻辑**：v_[毫秒时间戳].mp4。
-  - 
-  - *示例*：v_1716889200000.mp4。
-  - **前缀 v_**：用于区分这是一个 Video 片段，区别于图片的 i_。
-  - **时间戳**：建议使用**开始录制时**的系统时间戳，确保唯一性。
+#### A. 快捷键 (Key Bindings - From setting.json)
 
-### 4. UI 布局与交互
+- record_clip: R (切换录制状态：开始/停止)
+- cancel_record: Shift+R (取消当前录制，不保存并恢复状态)
 
-#### 4.1 控制按钮
+#### B. 数据存储路径 (Storage Path)
 
-- 
-- **位置**：位于 **截图按钮**（Screenshot Icon）的旁边，归属于“素材提取”功能组。
-- **样式**：
-  - 
-  - **默认状态**：圆形的录制图标（🔴）。
-  - **录制中状态**：方形的停止图标（⏹），且可能带有红色闪烁效果。
-- **交互**：
-  - 
-  - **点击开始**：视频继续播放，后台开始捕获流。
-  - **点击停止**：结束录制，保存文件，按钮恢复默认状态。
+- **主目录**：data/screenshots/
+- **具体视频目录**：data/screenshots/[Hash前两位]/[完整Hash]/
+  - 录制的视频片段与该视频的所有截图共享此文件夹。
 
-#### 4.2 视口反馈 (OSD)
+#### C. 文件命名规范 (File Naming Convention)
 
-- 
-- **位置**：视频播放视口（Viewport）的 **右上角**。
-- **显示内容**：
-  - 
-  - **红点指示器** + **录制时长**。
-  - *格式*：🔴 REC 00:00:12。
-- **逻辑**：仅在录制状态下显示，录制结束后立即消失。
+- **录制片段**：v_[毫秒时间戳].mp4
+  - **前缀 v_**：明确标识为视频片段。
+  - **时间戳**：使用**开始录制时**的开始帧毫秒时间戳。
+  - **示例**：v_1500.mp4
 
-### 5. 导出逻辑联动
+### 4. 录制流程与状态管理 (Recording Flow & State Management)
 
-录制功能并不是孤立的，它深度集成了现有的 **截图导出体系**：
+这是该功能的核心，描述了从触发到结束的完整生命周期。
 
-- 
-- **触发方式**：用户按下 Alt + E（或点击导出截图按钮）。
-- **包含内容**：
-  - 
-  - 系统在打包 Data/screenshot/[Video_Hash]/ 目录下的内容时，不再仅限于 .webp 图片。
-  - **新增规则**：扫描并包含所有 v_*.mp4 文件。
-- **旋转处理**：
-  - 
-  - 如果用户在导出弹窗中设置了旋转（如 90度），录制的视频片段在导出时**建议**也进行相应的旋转处理（Re-encode with rotation metadata），或者至少原样导出。
-  - *建议逻辑*：为保证导出速度，默认原样复制文件；若技术允许，可根据 screenshot_rotation 元数据为 MP4 写入旋转标记。
+#### 步骤 1: 开始录制 (按下 R)
 
-### 6. 核心逻辑细节
+1. **保存当前状态**：系统立即记录播放器当前的状态，特别是**播放模式**（例如，是否处于 skip_frame 跳帧播放模式）。
+2. **重置播放模式**：无论之前处于何种模式，播放器强制切换到**标准、连续的播放模式** (1x 速度)，以确保录制内容的流畅性。
+3. **进入锁定状态**：
+   - **禁用所有其他快捷键**：包括播放控制 (WASD, Space)、列表切换 (1-6)、截图 (E)、标签 (T) 等所有非录制相关的快捷键。
+   - **禁用所有UI交互**：主播放器界面和侧边列表的所有按钮、进度条拖动、音量调节等均变为不可点击状态。
+4. **启动UI反馈**：
+   - 在视频视口的**右上角**显示OSD（On-Screen Display）指示器，格式为 🔴 REC 00:00:00，计时器从零开始。
+5. **开始捕获**：后台开始捕获视频流。
 
-- 
-- **录制范围**：
-  - 
-  - **开始**：点击按钮的瞬间（当前帧）。
-  - **结束**：再次点击按钮的瞬间。
-- **暂停处理**：
-  - 
-  - 如果在录制过程中用户按下了暂停（Space）：录制计时器也应**暂停**。
-  - 当恢复播放时：录制继续。
-  - 最终生成的文件应是**连续的**，不包含暂停期间的静止画面。
-- **步进录制**：
-  - 
-  - 允许用户在“录制中”使用步进功能（A/D键）。这将允许用户以极慢的速度、逐帧地录制精细操作，最终生成的 MP4 仍按正常帧率播放（即实现了类似“逐帧动画”或慢动作捕捉的效果）。
+#### 步骤 2: 录制期间
 
-### 7. 总结
+- 视频持续以标准模式播放。
+- 右上角的OSD计时器实时更新。
+- 应用处于“只读”状态，仅响应 R (停止) 和 Shift+R (取消) 两个快捷键。
 
+#### 步骤 3: 停止录制 (两种情况)
 
+- **情况 A: 手动停止 (再次按下 R)**
+  - 系统在当前帧停止捕获视频流。
+- **情况 B: 自动停止 (视频播放结束)**
+  - 播放器触发 onEnded 事件，系统自动停止捕获。
 
+#### 步骤 4: 录制完成与状态恢复
 
+1. **保存文件**：将捕获的视频流编码并保存为 .mp4 文件到指定的素材目录。
+2. **退出锁定状态**：重新启用所有之前被禁用的快捷键和UI交互。
+3. **恢复播放器状态**：将播放器模式**恢复到步骤1中保存的状态**。例如，如果录制前是“跳帧模式”，则播放器恢复为“跳帧模式”。
+4. **移除UI反馈**：右上角的OSD指示器消失。
+5. **显示Toast提示**：在界面弹出短暂的 Toast 提示，内容为“录制片段已保存”。
 
-| 特性        | 录制功能 (Recording)    | 截图功能 (Screenshot)   |
-| ----------- | ----------------------- | ----------------------- |
-| **产物**    | .mp4 视频片段           | .webp 静态图片          |
-| **命名**    | v_[时间戳]              | i_[时间戳]              |
-| **存储**    | Data/screenshot/[Hash]/ | Data/screenshot/[Hash]/ |
-| **导出**    | 随 Alt+E 一并导出       | 随 Alt+E 一并导出       |
-| **UI 反馈** | 按钮变方 + 右上角计时器 | 顶部 Toast 提示         |
+#### 特殊情况: 取消录制 (按下 Shift+R)
+
+1. **立即终止**：录制过程被立即中断。
+2. **丢弃数据**：所有已捕获的临时视频流数据被丢弃，不生成任何文件。
+3. **状态恢复与解锁**：与正常完成录制一样，系统会立即退出锁定状态并恢复之前的播放器状态。
+4. **UI反馈**：OSD指示器消失，弹出一个 Toast 提示，如“录制已取消”。
+
+### 5. 导出逻辑联动 (Export Logic Integration)
+
+- 此部分的逻辑保持不变。当用户使用 Ctrl+E 或 Alt+E 导出素材时，系统会自动扫描并包含 data/screenshots/[Hash]/ 目录下的所有 v_*.mp4 文件，将其原样复制到导出目录中。
+
+### 6. 总结 (Summary)
+
+| 特性               | 录制功能 (Recording)                       | 截图功能 (Screenshot)      |
+| ------------------ | ------------------------------------------ | -------------------------- |
+| **产物**           | .mp4 视频片段                              | .webp 静态图片             |
+| **快捷键**         | R (切换录制), Shift+R (取消)               | E (单张截图)               |
+| **命名规范**       | v_[时间戳].mp4                             | [时间戳]_m.webp / _a.webp  |
+| **存储路径**       | data/screenshots/[Hash]/                   | data/screenshots/[Hash]/   |
+| **UI 反馈**        | 右上角OSD计时器, 进入/退出 **锁定模式**    | 顶部 Toast 提示            |
+| **核心机制**       | **状态保存与恢复**，播放模式强制为标准模式 | 截取当前帧，不改变播放状态 |
+| **录制中可操作性** | **不可操作** (除停止/取消外)               | **完全可操作**             |
+| **取消操作**       | Shift+R (丢弃片段并恢复状态)               | 无                         |
